Prevent navbar collapse

--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -14,6 +14,7 @@ h1 {
     text-align: center;
     margin: 0;
     padding: 32.5px 0px 32.5px 0px;
+    font-weight: bold;
 }
 
 a {
