--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,4 +1,3 @@
 body {
-    background-color: black;
-    overflow-x: hidden;
+  overflow-x: hidden;
 }
